--- a/package.json
+++ b/package.json
@@ -18,32 +18,32 @@
     "test": "pnpm jest"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.3",
-    "@babel/preset-env": "^7.20.2",
-    "@nuxt/test-utils": "^3.3.2",
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@nuxt/test-utils": "^3.4.2",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
-    "@types/jest": "^29.5.0",
-    "@typescript-eslint/parser": "^5.57.0",
-    "@vue/test-utils": "2.0.0-rc.18",
+    "@types/jest": "^29.5.1",
+    "@typescript-eslint/parser": "^5.59.0",
+    "@vue/test-utils": "2.3.2",
     "@vue/vue3-jest": "^29.2.3",
     "babel-jest": "^29.5.0",
-    "eslint": "^8.37.0",
+    "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jest-transform-stub": "^2.0.0",
-    "nuxt": "^3.3.2",
+    "nuxt": "^3.4.2",
     "prettier": "^2.8.7",
-    "ts-jest": "^29.0.5",
-    "typescript": "^4.9.5"
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.4"
   },
   "dependencies": {
     "@mdi/font": "^7.2.96",
-    "@nuxt/kit": "^3.3.2",
-    "@nuxtjs/pwa": "^3.3.5",
-    "sass": "^1.60.0",
+    "@nuxt/kit": "^3.4.2",
+    "@kevinmarrec/nuxt-pwa": "^0.17.0",
+    "sass": "^1.62.0",
     "vue-responsive-video-background-player": "^2.3.1",
-    "vuetify": "^3.1.12"
+    "vuetify": "^3.1.15"
   }
 }
